--- a/index.html
+++ b/index.html
@@ -46,25 +46,26 @@
       <section class="section1 p-3">
         <div class="text-container px-4  d-flex flex-column justify-content-center mt-lg-5 mb-5 "> 
           <h1 class="display-3">Bienvenido a nuestra tienda de licores! </h1>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit aut nobis iusto perspiciatis assumenda eligendi dolore quam, repellat eum ipsum saepe iure error reiciendis quia.</p>
-          <a class="btn btn-outline-secondary py-2 fs-6 ">INICIAR SESION </a>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A, tempore.</p>
+          <a class="btn btn-outline-secondary py-2 fs-6">INICIAR SESION </a>
+
         </div>
 
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img src="https://w0.peakpx.com/wallpaper/76/67/HD-wallpaper-%E2%9D%A4%EF%B8%8F-bottle-roses-glass-wine.jpg" 
-              class="d-block w-100 carouselIMG" 
+              class="img-fluid d-block w-100 carouselIMG" 
               alt="...">
             </div>
             <div class="carousel-item">
               <img src="https://w0.peakpx.com/wallpaper/659/1013/HD-wallpaper-glass-of-red-wine-bottle-rose-wine-glass.jpg" 
-              class="d-block w-100 carouselIMG" 
+              class="img-fluid d-block w-100 carouselIMG" 
               alt="...">
             </div>
             <div class="carousel-item">
               <img src="https://e0.pxfuel.com/wallpapers/67/916/desktop-wallpaper-red-wines-wine-aesthetic.jpg" 
-              class="d-block w-100 carouselIMG" 
+              class="img-fluid d-block w-100 carouselIMG" 
               alt="...">
     
             </div>
