--- a/index.html
+++ b/index.html
@@ -173,6 +173,9 @@
 
           <div class="container">
             <div class="row">
+              <div class="col-sm-12 text-center ">
+                <h1>Contactanos..</h1>
+              </div>
               <div class="col-sm-8">
 
                 <div class="mb-3">
